# proyecto-final-2025-2-gurupo-5

./: .gitignore  CMakeLists.txt  README.md  evaluation_results.txt
data/medical_mnist/: info.txt
data/processed/: metadata.txt
docs/: documentation.md
examples/: 1_train_xor.cpp  2_train_medical_mnist.cpp  3_evaluate_model.cpp  4_predict_single.cpp
include/utec/data/: medical_mnist_loader.h
models/medical_mnist_model/: layer0_biases.txt  layer1_biases.txt  layer1_weights.txt  layer2_biases.txt  layer2_weights.txt
scripts/: convert_images_to_csv.cpp
src/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_loss.h  nn_optimizer.h  tensor.h
tests/: test_data_loader.cpp  test_neural_network.cpp  test_tensor.cpp
